--- a/src/app/pages/macroCiclo/macroCiclo.component.html
+++ b/src/app/pages/macroCiclo/macroCiclo.component.html
@@ -142,10 +142,10 @@
                 <dxi-column dataField="fin" caption="Fecha fin" dataType="date" format="dd/mm/yyyy" [width]="150"></dxi-column>
                 <dxi-column dataField="kms" caption="Kilometros" [format]="separator" [width]="100"></dxi-column>
                 <dxi-column dataField="flete" caption="Flete" format="$ #,###,###.##;-$ #,##0.##" [width]="100"></dxi-column>
-                <dxi-column dataField="ingrXKm" caption="Ingreso Kilometro" [width]="150"></dxi-column>
+                <dxi-column dataField="ingrXKm" caption="Ingreso Kilometro" format="$ #,###,###.##;-$ #,##0.##" [width]="150"></dxi-column>
                 <dxi-column dataField="kmsAcumulado" caption="Kms. Acumulado" [format]="separator" [width]="130"></dxi-column>
                 <dxi-column dataField="fleteAcumulado" caption="Flete acumulado" format="$ #,###,###.##;-$ #,##0.##" [width]="150"></dxi-column>
-                <dxi-column dataField="ingrXKmAcumulado" caption="Ingr. kms. Acumulado" [width]="150"></dxi-column>
+                <dxi-column dataField="ingrXKmAcumulado" caption="Ingr. kms. Acumulado" format="$ #,###,###.##;-$ #,##0.##" [width]="150"></dxi-column>
 
                 <!-- <dxi-column dataField="ciclo" caption="Ciclo" [width]="100"></dxi-column>
                 <dxi-column dataField="cicloCliente" caption="Ciclo cliente" [width]="140"></dxi-column>
