--- a/src/app/pages/carteraClientes/carteraClientes.component.html
+++ b/src/app/pages/carteraClientes/carteraClientes.component.html
@@ -238,7 +238,7 @@
             <dxi-column dataField="nombre" caption="NOMBRE" [width]="250" [fixed]="true"></dxi-column>
             <dxi-column dataField="serie" caption="SERIE" [width]="100"></dxi-column>
             <dxi-column dataField="documento" caption="DOCUMENTO" [width]="120"></dxi-column>            
-            <dxi-column dataField="fechA_GUIA" caption="GUÍA" dataType="date" format="dd/mm/yyyy" [width]="150"></dxi-column>
+            <dxi-column dataField="fechA_GUIA" caption="GUÍA" dataType="date" format="MM/dd/yyyy" [width]="150"></dxi-column>
             <dxi-column dataField="nocarta" caption="NO. CARTA" [width]="100"></dxi-column> 
             <dxi-column dataField="referencia" caption="REFERENCIA" [width]="100"></dxi-column>
             <dxi-column dataField="observaciones" caption="OBSERVACIONES" [width]="200"></dxi-column> 
