actualizacion tamaño grid

--- a/src/app/pages/CarteraInterCompanias/carteraInterCompanias.component.html
+++ b/src/app/pages/CarteraInterCompanias/carteraInterCompanias.component.html
@@ -165,16 +165,16 @@
             <dxi-column dataField="compania" caption="" [groupIndex]="0"></dxi-column>
             <dxi-column dataField="nombre" caption="" [groupIndex]="1"></dxi-column>
             
-            <dxi-column dataField="iD_AREA" caption="ID" [width]="100"></dxi-column>
-            <dxi-column dataField="compania" caption="COMPAÑIA" [width]="100"></dxi-column>
-            <dxi-column dataField="cliente" caption="CLIENTE" [width]="100"></dxi-column>
-            <dxi-column dataField="nombre" caption="NOMBRE" [width]="100"></dxi-column>
-            <dxi-column dataField="documento" caption="DOCUMENTO" [width]="100"></dxi-column>
-            <dxi-column dataField="totaL_INTEGRADO" caption="MONTO" [width]="100" [format]="separator" ></dxi-column>
-            <dxi-column dataField="interIdCliente" caption="ID" [width]="100"></dxi-column>
-            <dxi-column dataField="interCliente" caption="CLIENTE INTERCOMPAÑIA" [width]="150"></dxi-column>
-            <dxi-column dataField="interIdArea" caption="ID ÁREA" [width]="130"></dxi-column>
-            <dxi-column dataField="interArea" caption="ÁREA" [width]="100"></dxi-column>
+            <dxi-column dataField="iD_AREA" caption="ID"></dxi-column>
+            <dxi-column dataField="compania" caption="COMPAÑIA"></dxi-column>
+            <dxi-column dataField="cliente" caption="CLIENTE"></dxi-column>
+            <dxi-column dataField="nombre" caption="NOMBRE"></dxi-column>
+            <dxi-column dataField="documento" caption="DOCUMENTO" ></dxi-column>
+            <dxi-column dataField="totaL_INTEGRADO" caption="MONTO" [format]="separator" ></dxi-column>
+            <dxi-column dataField="interIdCliente" caption="ID" ></dxi-column>
+            <dxi-column dataField="interCliente" caption="CLIENTE INTERCOMPAÑIA" ></dxi-column>
+            <dxi-column dataField="interIdArea" caption="ID ÁREA" ></dxi-column>
+            <dxi-column dataField="interArea" caption="ÁREA" ></dxi-column>
             <!-- <dxi-column dataField="serie" caption="SERIE" [width]="100"></dxi-column>
             
             <dxi-column dataField="fechA_GUIA" caption="GUÍA" dataType="date" format="dd/mm/yyyy" [width]="150"></dxi-column>
