--- a/src/app/pages/ingresos-detallados/ingresos-detallados.component.html
+++ b/src/app/pages/ingresos-detallados/ingresos-detallados.component.html
@@ -1731,90 +1731,47 @@
 
                 <dxo-export [enabled]="true"></dxo-export>
                 <dxo-search-panel [visible]="true" [width]="240" placeholder="Buscar..."></dxo-search-panel>
-                <!-- unidadNegocio -->
+                
                 <dxi-column dataField="unidadNegocio" [groupIndex]="0"></dxi-column>
-                <!-- tipoOperacion -->
                 <dxi-column dataField="tipoOperacion" caption="Operación" [fixed]="true"></dxi-column>
 
-                <!-- febMASolicitudCancelacion -->
-                <dxi-column caption="MOVIMIENTOS DE VIAJES DEL MES ANTERIOR" cellTemplate="headerTemplate" alignment="center" [allowSorting]="false">
-
-                    <!-- CancelacionProvision -->
-                    <dxi-column dataField="cancelacionProvision" caption="Prov. Cancelada" headerCellTemplate="headerTemplate">
-                        <dxo-format type="currency" [precision]="2"> </dxo-format>
-                    </dxi-column>
-
-                    <!-- ProvisionFacturada -->
-                    <dxi-column dataField="facturadoProvision" caption="Prov. Facturada" headerCellTemplate="headerTemplate">
-                        <dxo-format type="currency" [precision]="2"> </dxo-format>
-                    </dxi-column>
-
-                    <!-- Refacturado -->
-                    <dxi-column dataField="refacturado" caption="Refacturado" headerCellTemplate="headerTemplate">
-                        <dxo-format type="currency" [precision]="2"> </dxo-format>
-                    </dxi-column>
-
-
-                    <!-- febMADisminucion -->
-                    <dxi-column dataField="maSolicitudCancelacion" caption="Cancelado" headerCellTemplate="headerTemplate">
-                        <dxo-format type="currency" [precision]="2"> </dxo-format>
-                    </dxi-column>
-
-                    <!-- febMADisminucion -->
-                    <dxi-column dataField="maCancelacionOtros" caption="Canc. Otros Ingresos" headerCellTemplate="headerTemplate">
-                        <dxo-format type="currency" [precision]="2"> </dxo-format>
-                    </dxi-column>
-
-
-                    <!-- febMANuevo -->
-                    <dxi-column dataField="maTotal" caption="Total" headerCellTemplate="headerTemplate">
-                        <dxo-format type="currency" [precision]="2"> </dxo-format>
-                    </dxi-column>
-
+                <dxi-column caption="MOVIMIENTOS DEL MES ANTERIOR" cellTemplate="headerTemplate" alignment="center" [allowSorting]="false">
+                    <dxi-column dataField="facturadoProvision" caption="Prov. Facturada" headerCellTemplate="headerTemplate"></dxi-column>
+                    <dxi-column dataField="refacturado" caption="Refacturado" headerCellTemplate="headerTemplate"></dxi-column>
+                    <dxi-column dataField="cancelacionProvision" caption="Prov. Cancelada" headerCellTemplate="headerTemplate"></dxi-column>
+                    <dxi-column dataField="maSolicitudCancelacion" caption="Cancelado" headerCellTemplate="headerTemplate"></dxi-column>
+                    <dxi-column dataField="maCancelacionOtros" caption="Canc. Otros Ingresos" headerCellTemplate="headerTemplate"></dxi-column>
+                    <dxi-column dataField="maTotal" caption="Total Mes Anterior" headerCellTemplate="headerTemplate"></dxi-column>
                 </dxi-column>
 
-                <!-- febIngreso -->
-                <dxi-column caption="FLETE DEL MES" cellTemplate="headerTemplate" alignment="center" [allowSorting]="false">
-                    <dxi-column dataField="facturado" caption="Facturado" alignment="right" headerCellTemplate="headerTemplate">
-                        <dxo-format type="currency" [precision]="2"> </dxo-format>
-                    </dxi-column>
-
-                    <!-- febProvision -->
-                    <dxi-column dataField="provision" caption="Provisión" alignment="right" headerCellTemplate="headerTemplate">
-                        <dxo-format type="currency" [precision]="2"> </dxo-format>
-                    </dxi-column>
-                    <!-- febProvision -->
-                    <dxi-column dataField="diferencias2022" caption="Diferencias2022" alignment="right" headerCellTemplate="headerTemplate">
-                        <dxo-format type="currency" [precision]="2"> </dxo-format>
-                    </dxi-column>
-                    <!-- despachado -->
-                    <dxi-column dataField="totalFlete" caption="TOTAL" alignment="right" headerCellTemplate="headerTemplate">
-                        <dxo-format type="currency" [precision]="2"> </dxo-format>
-                    </dxi-column>
+                <dxi-column caption="INGRESO DEL MES" cellTemplate="headerTemplate" alignment="center" [allowSorting]="false">
+                    <dxi-column dataField="facturado" caption="Facturado" alignment="right" headerCellTemplate="headerTemplate"></dxi-column>
+                    <dxi-column dataField="provision" caption="Provisión" alignment="right" headerCellTemplate="headerTemplate"></dxi-column>
+                    <dxi-column dataField="otrosIngresos" caption="Otros ingresos" alignment="right" headerCellTemplate="headerTemplate"></dxi-column>
+                    <dxi-column dataField="totalFlete" caption="Total Ingreso Mes" alignment="right" headerCellTemplate="headerTemplate"></dxi-column>
                 </dxi-column>
 
-                <dxi-column dataField="notasCredito" caption="Notas Crédito " alignment="right" [width]="120" headerCellTemplate="headerTemplate">
-                    <dxo-format type="currency" [precision]="3"> </dxo-format>
-                </dxi-column>
+                <dxi-column caption="INGRESO DEL MES" cellTemplate="headerTemplate" alignment="center" [allowSorting]="false">
+                    <dxi-column dataField="maTotal" caption="Total Mes Anterior" headerCellTemplate="headerTemplate"></dxi-column>
+                    <dxi-column dataField="totalFlete" caption="Total Ingreso Mes" alignment="right" headerCellTemplate="headerTemplate"></dxi-column>
+                    <dxi-column dataField="notasCredito" caption="Notas Crédito " alignment="right" [width]="120" headerCellTemplate="headerTemplate"></dxi-column>
+                    <dxi-column dataField="total" caption="TOTAL" alignment="right" headerCellTemplate="headerTemplate"></dxi-column>
+                </dxi-column>    
 
-                <dxi-column caption="RESUMEN" cellTemplate="headerTemplate" alignment="center" [allowSorting]="false">
+                <dxi-column dataField="facturasDirectas" caption="Facturas directas" alignment="right" headerCellTemplate="headerTemplate"></dxi-column>
+
+                <!-- <dxi-column caption="RESUMEN" cellTemplate="headerTemplate" alignment="center" [allowSorting]="false">
                     
-
-                    <dxi-column dataField="otrosIngresos" caption="Otros ingresos" alignment="right" headerCellTemplate="headerTemplate">
-                        <dxo-format type="currency" [precision]="2"> </dxo-format>
-                    </dxi-column>
                     <dxi-column dataField="totalMes" caption="Total Mes" alignment="right" headerCellTemplate="headerTemplate">
                         <dxo-format type="currency" [precision]="2"> </dxo-format>
                     </dxi-column>
-                    <dxi-column dataField="total" caption="TOTAL" alignment="right" headerCellTemplate="headerTemplate">
+
+                    <dxi-column dataField="diferencias2022" caption="Diferencias2022" alignment="right" headerCellTemplate="headerTemplate">
                         <dxo-format type="currency" [precision]="2"> </dxo-format>
                     </dxi-column>
-
-                </dxi-column>
+                </dxi-column> -->
                 <!-- febProvision -->
-                <dxi-column dataField="facturasDirectas" caption="Facturas directas" alignment="right" headerCellTemplate="headerTemplate">
-                    <dxo-format type="currency" [precision]="2"> </dxo-format>
-                </dxi-column>
+
 
                 <dxo-summary>
                     <dxi-group-item column="cancelacionProvision" summaryType="sum" displayFormat="{0}" valueFormat="$ #,###,###.##;-$ #,##0.##" [showInGroupFooter]="true">
