--- a/src/app/pages/ingresos-detallados/ingresos-detallados.component.html
+++ b/src/app/pages/ingresos-detallados/ingresos-detallados.component.html
@@ -1726,40 +1726,39 @@
         </dxi-item>
         <dxi-item title="Oct 2023">
             <!--#region :::: GRID PRINCIPAL::::  -->
-
-            <dx-data-grid #Abr id="gridContainer3" [dataSource]="arrIngresosOctubre" [height]="500" [showBorders]="true" [columnAutoWidth]="true"
-             (onRowPrepared)="onRowPrepared($event)">
-
+             <dx-data-grid  #ING id="gridContainer10" [dataSource]="arrIngresosOctubre" [height]="500"[showBorders]="true" [columnAutoWidth]="true"
+             (onRowPrepared)="onRowPreparedOct($event)" (onCellPrepared)="onCellPreparedOct($event)">
+             
                 <dxo-export [enabled]="true"></dxo-export>
                 <dxo-search-panel [visible]="true" [width]="240" placeholder="Buscar..."></dxo-search-panel>
                 
                 <dxi-column dataField="unidadNegocio" [groupIndex]="0"></dxi-column>
                 <dxi-column dataField="tipoOperacion" caption="Operación" [fixed]="true"></dxi-column>
 
-                <dxi-column caption="MOVIMIENTOS DEL MES ANTERIOR" cellTemplate="headerTemplate" alignment="center" [allowSorting]="false">
-                    <dxi-column dataField="facturadoProvision" caption="Prov. Facturada" headerCellTemplate="headerTemplate"></dxi-column>
-                    <dxi-column dataField="refacturado" caption="Refacturado" headerCellTemplate="headerTemplate"></dxi-column>
-                    <dxi-column dataField="cancelacionProvision" caption="Prov. Cancelada" headerCellTemplate="headerTemplate"></dxi-column>
-                    <dxi-column dataField="maSolicitudCancelacion" caption="Cancelado" headerCellTemplate="headerTemplate"></dxi-column>
-                    <dxi-column dataField="maCancelacionOtros" caption="Canc. Otros Ingresos" [width]="150" headerCellTemplate="headerTemplate"></dxi-column>
-                    <dxi-column dataField="maTotal" caption="Total Mes Anterior" headerCellTemplate="headerTemplate"></dxi-column>
+                <dxi-column caption="MOVIMIENTOS DEL MES ANTERIOR"  alignment="center" [allowSorting]="false">
+                    <dxi-column dataField="facturadoProvision" caption="Prov. Facturada" ></dxi-column>
+                    <dxi-column dataField="refacturado" caption="Refacturado" ></dxi-column>
+                    <dxi-column dataField="cancelacionProvision" caption="Prov. Cancelada" ></dxi-column>
+                    <dxi-column dataField="maSolicitudCancelacion" caption="Cancelado" ></dxi-column>
+                    <dxi-column dataField="maCancelacionOtros" caption="Canc. Otros Ingresos" [width]="150" ></dxi-column>
+                    <dxi-column dataField="maTotal" caption="Total Mes Anterior" ></dxi-column>
                 </dxi-column>
 
-                <dxi-column caption="INGRESO DEL MES" cellTemplate="headerTemplate" alignment="center" [allowSorting]="false">
-                    <dxi-column dataField="facturado" caption="Facturado" alignment="right" headerCellTemplate="headerTemplate"></dxi-column>
-                    <dxi-column dataField="provision" caption="Provisión" alignment="right" headerCellTemplate="headerTemplate"></dxi-column>
-                    <dxi-column dataField="otrosIngresos" caption="Otros ingresos" alignment="right" headerCellTemplate="headerTemplate"></dxi-column>
-                    <dxi-column dataField="totalFlete" caption="Total Ingreso Mes" alignment="right" headerCellTemplate="headerTemplate"></dxi-column>
+                <dxi-column caption="INGRESO DEL MES"  alignment="center" [allowSorting]="false">
+                    <dxi-column dataField="facturado" caption="Facturado" alignment="right" ></dxi-column>
+                    <dxi-column dataField="provision" caption="Provisión" alignment="right" ></dxi-column>
+                    <dxi-column dataField="otrosIngresos" caption="Otros ingresos" alignment="right" ></dxi-column>
+                    <dxi-column dataField="totalFlete" caption="Total Ingreso Mes" alignment="right" ></dxi-column>
                 </dxi-column>
 
-                <dxi-column caption="RESUMEN DEL MES" cellTemplate="headerTemplate" alignment="center" [allowSorting]="false">
-                    <dxi-column dataField="maTotal" caption="Total Mes Anterior" [width]="150" headerCellTemplate="headerTemplate"></dxi-column>
-                    <dxi-column dataField="totalFlete" caption="Total Ingreso Mes" [width]="150" alignment="right" headerCellTemplate="headerTemplate"></dxi-column>
-                    <dxi-column dataField="notasCredito" caption="Notas Crédito " alignment="right" [width]="120" headerCellTemplate="headerTemplate"></dxi-column>
-                    <dxi-column dataField="total" caption="TOTAL" alignment="right" headerCellTemplate="headerTemplate"></dxi-column>
+                <dxi-column caption="RESUMEN DEL MES"  alignment="center" [allowSorting]="false">
+                    <dxi-column dataField="maTotal" caption="Total Mes Anterior" [width]="150" ></dxi-column>
+                    <dxi-column dataField="totalFlete" caption="Total Ingreso Mes" [width]="150" alignment="right" ></dxi-column>
+                    <dxi-column dataField="notasCredito" caption="Notas Crédito " alignment="right" [width]="120" ></dxi-column>
+                    <dxi-column dataField="total" caption="TOTAL" alignment="right" ></dxi-column>
                 </dxi-column>    
 
-                <dxi-column dataField="facturasDirectas" caption="Facturas directas" alignment="right" headerCellTemplate="headerTemplate"></dxi-column>
+                <dxi-column dataField="facturasDirectas" caption="Facturas directas" alignment="right" ></dxi-column>
 
                 <!-- <dxi-column caption="RESUMEN" cellTemplate="headerTemplate" alignment="center" [allowSorting]="false">
                     
@@ -1775,78 +1774,44 @@
 
 
                 <dxo-summary>
-                    <dxi-group-item column="cancelacionProvision" summaryType="sum" displayFormat="{0}" valueFormat="$ #,###,###.##;-$ #,##0.##" [showInGroupFooter]="true">
-                    </dxi-group-item>
-                    <dxi-total-item column="cancelacionProvision" summaryType="sum" valueFormat="$ #,##0.##;-$ #,##0.##" displayFormat="{0}">
-                    </dxi-total-item>
-                    <dxi-group-item column="facturadoProvision" summaryType="sum" displayFormat="{0}" valueFormat="$ #,###,###.##;-$ #,##0.##" [showInGroupFooter]="true">
-                    </dxi-group-item>
-                    <dxi-total-item column="facturadoProvision" summaryType="sum" valueFormat="$ #,##0.##;-$ #,##0.##" displayFormat="{0}">
-                    </dxi-total-item>
-                    <dxi-group-item column="refacturado" summaryType="sum" displayFormat="{0}" valueFormat="$ #,###,###.##;-$ #,##0.##" [showInGroupFooter]="true">
-                    </dxi-group-item>
-                    <dxi-total-item column="refacturado" summaryType="sum" valueFormat="$ #,##0.##;-$ #,##0.##" displayFormat="{0}">
-                    </dxi-total-item>
-                    <dxi-group-item column="maSolicitudCancelacion" summaryType="sum" displayFormat="{0}" valueFormat="$ #,###,###.##;-$ #,##0.##" [showInGroupFooter]="true">
-                    </dxi-group-item>
-                    <dxi-total-item column="maSolicitudCancelacion" summaryType="sum" valueFormat="$ #,##0.##;-$ #,##0.##" displayFormat="{0}">
-                    </dxi-total-item>
-                    <dxi-group-item column="maCancelacionOtros" summaryType="sum" displayFormat="{0}" valueFormat="$ #,###,###.##;-$ #,##0.##" [showInGroupFooter]="true">
-                    </dxi-group-item>
-                    <dxi-total-item column="maCancelacionOtros" summaryType="sum" valueFormat="$ #,##0.##;-$ #,##0.##" displayFormat="{0}">
-                    </dxi-total-item>
-                    <dxi-group-item column="maTotal" summaryType="sum" displayFormat="{0}" valueFormat="$ #,###,###.##;-$ #,##0.##" [showInGroupFooter]="true">
-                    </dxi-group-item>
-                    <dxi-total-item column="maTotal" summaryType="sum" valueFormat="$ #,##0.##;-$ #,##0.##" displayFormat="{0}">
-                    </dxi-total-item>
-                    <dxi-group-item column="facturado" summaryType="sum" displayFormat="{0}" valueFormat="$ #,###,###.##;-$ #,##0.##" [showInGroupFooter]="true">
-                    </dxi-group-item>
-                    <dxi-total-item column="facturado" summaryType="sum" valueFormat="$ #,##0.##;-$ #,##0.##" displayFormat="{0}">
-                    </dxi-total-item>
-                    <dxi-group-item column="provision" summaryType="sum" displayFormat="{0}" valueFormat="$ #,###,###.##;-$ #,##0.##" [showInGroupFooter]="true">
-                    </dxi-group-item>
-                    <dxi-total-item column="provision" summaryType="sum" valueFormat="$ #,##0.##;-$ #,##0.##" displayFormat="{0}">
-                    </dxi-total-item>
-                    <dxi-group-item column="totalFlete" summaryType="sum" displayFormat="{0}" valueFormat="$ #,###,###.##;-$ #,##0.##" [showInGroupFooter]="true">
-                    </dxi-group-item>
-                    <dxi-total-item column="totalFlete" summaryType="sum" valueFormat="$ #,##0.##;-$ #,##0.##" displayFormat="{0}">
-                    </dxi-total-item>
-
-                    <dxi-group-item column="notasCredito" summaryType="sum" displayFormat="{0}" valueFormat="$ #,###,###.##;-$ #,##0.##" [showInGroupFooter]="true">
-                    </dxi-group-item>
-                    <dxi-total-item column="notasCredito" summaryType="sum" valueFormat="$ #,##0.##;-$ #,##0.##" displayFormat="{0}">
-                    </dxi-total-item>
-
-                    <dxi-group-item column="otrosIngresos" summaryType="sum" displayFormat="{0}" valueFormat="$ #,###,###.##;-$ #,##0.##" [showInGroupFooter]="true">
-                    </dxi-group-item>
-                    <dxi-total-item column="otrosIngresos" summaryType="sum" valueFormat="$ #,##0.##;-$ #,##0.##" displayFormat="{0}">
-                    </dxi-total-item>
-                    <dxi-group-item column="totalMes" summaryType="sum" displayFormat="{0}" valueFormat="$ #,###,###.##;-$ #,##0.##" [showInGroupFooter]="true">
-                    </dxi-group-item>
-                    <dxi-total-item column="totalMes" summaryType="sum" valueFormat="$ #,##0.##;-$ #,##0.##" displayFormat="{0}">
-                    </dxi-total-item>
-                    <dxi-group-item column="diferencias2022" summaryType="sum" displayFormat="{0}" valueFormat="$ #,###,###.##;-$ #,##0.##" [showInGroupFooter]="true">
-                    </dxi-group-item>
-                    <dxi-total-item column="diferencias2022" summaryType="sum" valueFormat="$ #,##0.##;-$ #,##0.##" displayFormat="{0}">
-                    </dxi-total-item>
+                    <dxi-group-item column="cancelacionProvision" summaryType="sum" displayFormat="{0}" valueFormat="$ #,###,###.##;-$ #,##0.##" [showInGroupFooter]="true"></dxi-group-item>
+                    <dxi-group-item column="facturadoProvision" summaryType="sum" displayFormat="{0}" valueFormat="$ #,###,###.##;-$ #,##0.##" [showInGroupFooter]="true"></dxi-group-item>                    
+                    <dxi-group-item column="refacturado" summaryType="sum" displayFormat="{0}" valueFormat="$ #,###,###.##;-$ #,##0.##" [showInGroupFooter]="true"></dxi-group-item>                    
+                    <dxi-group-item column="maSolicitudCancelacion" summaryType="sum" displayFormat="{0}" valueFormat="$ #,###,###.##;-$ #,##0.##" [showInGroupFooter]="true"></dxi-group-item>                    
+                    <dxi-group-item column="maCancelacionOtros" summaryType="sum" displayFormat="{0}" valueFormat="$ #,###,###.##;-$ #,##0.##" [showInGroupFooter]="true"></dxi-group-item>
+                    <dxi-group-item column="maTotal" summaryType="sum" displayFormat="{0}" valueFormat="$ #,###,###.##;-$ #,##0.##" [showInGroupFooter]="true"></dxi-group-item>
+                    <dxi-group-item column="facturado" summaryType="sum" displayFormat="{0}" valueFormat="$ #,###,###.##;-$ #,##0.##" [showInGroupFooter]="true"></dxi-group-item>
+                    <dxi-group-item column="provision" summaryType="sum" displayFormat="{0}" valueFormat="$ #,###,###.##;-$ #,##0.##" [showInGroupFooter]="true"></dxi-group-item>
+                    <dxi-group-item column="totalFlete" summaryType="sum" displayFormat="{0}" valueFormat="$ #,###,###.##;-$ #,##0.##" [showInGroupFooter]="true"></dxi-group-item>
+                    <dxi-group-item column="notasCredito" summaryType="sum" displayFormat="{0}" valueFormat="$ #,###,###.##;-$ #,##0.##" [showInGroupFooter]="true"></dxi-group-item>
+                    <dxi-group-item column="otrosIngresos" summaryType="sum" displayFormat="{0}" valueFormat="$ #,###,###.##;-$ #,##0.##" [showInGroupFooter]="true"></dxi-group-item>
+                    <!-- <dxi-group-item column="totalMes" summaryType="sum" displayFormat="{0}" valueFormat="$ #,###,###.##;-$ #,##0.##" [showInGroupFooter]="true"></dxi-group-item> -->
+                    <!-- <dxi-group-item column="diferencias2022" summaryType="sum" displayFormat="{0}" valueFormat="$ #,###,###.##;-$ #,##0.##" [showInGroupFooter]="true"></dxi-group-item> -->
+                    <dxi-group-item column="total" summaryType="sum" displayFormat="{0}" valueFormat="$ #,###,###.##;-$ #,##0.##" [showInGroupFooter]="true"></dxi-group-item>
+                    <dxi-group-item column="facturasDirectas" summaryType="sum" displayFormat="{0}" valueFormat="$ #,###,###.##;-$ #,##0.##" [showInGroupFooter]="true"></dxi-group-item>
 
 
-
-                    <dxi-group-item column="total" summaryType="sum" displayFormat="{0}" valueFormat="$ #,###,###.##;-$ #,##0.##" [showInGroupFooter]="true">
-                    </dxi-group-item>
-                    <dxi-total-item column="total" summaryType="sum" valueFormat="$ #,##0.##;-$ #,##0.##" displayFormat="{0}">
-                    </dxi-total-item>
-
-                    <dxi-group-item column="facturasDirectas" summaryType="sum" displayFormat="{0}" valueFormat="$ #,###,###.##;-$ #,##0.##" [showInGroupFooter]="true">
-                    </dxi-group-item>
-                    <dxi-total-item column="facturasDirectas" summaryType="sum" valueFormat="$ #,##0.##;-$ #,##0.##" displayFormat="{0}">
-                    </dxi-total-item>
+                    <dxi-total-item column="cancelacionProvision" summaryType="sum" valueFormat="$ #,##0.##;-$ #,##0.##" displayFormat="{0}"></dxi-total-item>
+                    <dxi-total-item column="facturadoProvision" summaryType="sum" valueFormat="$ #,##0.##;-$ #,##0.##" displayFormat="{0}"></dxi-total-item>
+                    <dxi-total-item column="refacturado" summaryType="sum" valueFormat="$ #,##0.##;-$ #,##0.##" displayFormat="{0}"></dxi-total-item>
+                    <dxi-total-item column="maSolicitudCancelacion" summaryType="sum" valueFormat="$ #,##0.##;-$ #,##0.##" displayFormat="{0}"></dxi-total-item>
+                    <dxi-total-item column="maCancelacionOtros" summaryType="sum" valueFormat="$ #,##0.##;-$ #,##0.##" displayFormat="{0}"></dxi-total-item>
+                    <dxi-total-item column="maTotal" summaryType="sum" valueFormat="$ #,##0.##;-$ #,##0.##" displayFormat="{0}"></dxi-total-item>
+                    <dxi-total-item column="facturado" summaryType="sum" valueFormat="$ #,##0.##;-$ #,##0.##" displayFormat="{0}"></dxi-total-item>
+                    <dxi-total-item column="provision" summaryType="sum" valueFormat="$ #,##0.##;-$ #,##0.##" displayFormat="{0}"></dxi-total-item>
+                    <dxi-total-item column="totalFlete" summaryType="sum" valueFormat="$ #,##0.##;-$ #,##0.##" displayFormat="{0}"></dxi-total-item>
+                    <dxi-total-item column="notasCredito" summaryType="sum" valueFormat="$ #,##0.##;-$ #,##0.##" displayFormat="{0}"></dxi-total-item>
+                    <dxi-total-item column="otrosIngresos" summaryType="sum" valueFormat="$ #,##0.##;-$ #,##0.##" displayFormat="{0}"></dxi-total-item>
+                    <!-- <dxi-total-item column="totalMes" summaryType="sum" valueFormat="$ #,##0.##;-$ #,##0.##" displayFormat="{0}"></dxi-total-item> -->
+                    <!-- <dxi-total-item column="diferencias2022" summaryType="sum" valueFormat="$ #,##0.##;-$ #,##0.##" displayFormat="{0}"></dxi-total-item> -->
+                    <dxi-total-item column="total" summaryType="sum" valueFormat="$ #,##0.##;-$ #,##0.##" displayFormat="{0}"></dxi-total-item>
+                    <dxi-total-item column="facturasDirectas" summaryType="sum" valueFormat="$ #,##0.##;-$ #,##0.##" displayFormat="{0}"></dxi-total-item>
 
 
                 </dxo-summary>
 
                 <div *dxTemplate="let data of 'headerTemplate'">
-                    <div style="font-weight:bolder; color: black">
+                    <div style="font-weight:bolder; color: black;">
                         {{ data.column.caption }}
                     </div>
                 </div>
@@ -1862,9 +1827,7 @@
                     <div style="font-weight: bolder; font-size:medium;">{{ cell.text }}</div>
                 </div>
 
-
                 <dxo-paging [pageSize]="60"></dxo-paging>
-
                 <dxo-sorting mode="none"></dxo-sorting>
 
             </dx-data-grid>
