--- a/src/app/pages/carteraClientes/carteraClientes.component.html
+++ b/src/app/pages/carteraClientes/carteraClientes.component.html
@@ -5,15 +5,17 @@
         <dxi-item title="Cartera cliente">
             <br><br>
             <dx-responsive-box>
-                <dxi-col [ratio]=".20"></dxi-col>
+                <dxi-col [ratio]=".15"></dxi-col>
                 <dxi-col [ratio]=".40"></dxi-col>
-                <dxi-col [ratio]=".15"></dxi-col>
-                <dxi-col [ratio]=".30"></dxi-col>
+                <dxi-col [ratio]=".10"></dxi-col>
+                <dxi-col [ratio]=".20"></dxi-col>
                 <dxi-col [ratio]="1"></dxi-col>
-                <dxi-col [ratio]=".15"></dxi-col>
-                <dxi-col [ratio]="1"></dxi-col>
-                <dxi-col [ratio]=".25"></dxi-col>
+                <dxi-col [ratio]=".10"></dxi-col>
+                <dxi-col [ratio]=".40"></dxi-col>
+                <dxi-col [ratio]=".10"></dxi-col>
+                <dxi-col [ratio]=".40"></dxi-col>
 
+                <dxi-row [ratio]="1"></dxi-row>
                 <dxi-row [ratio]="1"></dxi-row>
                 <dxi-row [ratio]="1"></dxi-row>
                 <dxi-row [ratio]="1"></dxi-row>
@@ -56,6 +58,15 @@
                         </dx-button>
                     </div>
                 </dxi-item>
+
+                <dxi-item>
+                  <dxi-location screen="md lg" [row]="0" [col]="8"></dxi-location>
+                  <dxi-location style="margin-top: .20rem" screen="xs sm" [row]="12" [col]="0" [colspan]="12"></dxi-location>
+                  <div>
+                      <dx-button stylingMode="contained" text="Actualizar" type="normal" [width]="120" (onClick)="Actualizar()">
+                      </dx-button>
+                  </div>
+              </dxi-item>
 
             </dx-responsive-box>
 
