--- a/src/app/pages/macroCiclo/macroCiclo.component.html
+++ b/src/app/pages/macroCiclo/macroCiclo.component.html
@@ -74,7 +74,7 @@
             <dxi-column dataField="viajesCargados" caption="Viajes cargados" [width]="150"></dxi-column>
             <dxi-column dataField="kmsCargados" caption="Kms. Cargados" [format]="separator" [width]="130"></dxi-column>
             <dxi-column dataField="kmsCargadosPor" caption="%" format="percent" [width]="100"></dxi-column>
-            <dxi-column dataField="viajesVacios" caption="Viajes vacios" [width]="130"></dxi-column>
+            <dxi-column dataField="viajesVacio" caption="Viajes vacios" [width]="130"></dxi-column>
             <dxi-column dataField="kmsVacios" caption="Kms. Vacios" [format]="separator" [width]="130"></dxi-column>
             <dxi-column dataField="kmsVaciosPor" caption="%" format="percent" [width]="100"></dxi-column>
             <dxi-column dataField="clienteAtendido" caption="Cliente atendido" [width]="150"></dxi-column>
@@ -83,7 +83,7 @@
             <dxi-column dataField="fin" caption="Fecha fin" dataType="date" format="dd/mm/yyyy" [width]="130"></dxi-column>
             <dxi-column dataField="dias" caption="Días" [width]="100"></dxi-column>
             <dxi-column dataField="kms" caption="Kilometros" [format]="separator" [width]="120"></dxi-column>
-            <dxi-column dataField="flete" caption="Flete" [width]="100"></dxi-column>
+            <dxi-column dataField="flete" caption="Flete" [format]="separatorPesos" [width]="100"></dxi-column>
             <dxi-column dataField="ingrXKm" caption="Ingreso por Kilometro" [format]="redondear" [width]="180"></dxi-column>
 
             <dxi-column dataField="" caption="Detalle" [fixed]="false" cellTemplate="detalleCellTemplate" [width]="100"></dxi-column>
