--- a/src/app/pages/macroCiclo/macroCiclo.component.html
+++ b/src/app/pages/macroCiclo/macroCiclo.component.html
@@ -66,25 +66,26 @@
 
             <dxo-search-panel [visible]="true" [width]="240" placeholder="Buscar..."></dxo-search-panel>
             <dxo-header-filter [visible]="true"></dxo-header-filter>
+            <dxo-filter-row [visible]="showFilterRow" [applyFilter]="currentFilter"></dxo-filter-row>
 
             <dxi-column dataField="udN" caption="UdN" [allowSorting]="true" [width]="100"></dxi-column>
             <dxi-column dataField="ruta" caption="Ruta" [allowSorting]="true" [width]="250"></dxi-column>
             <dxi-column dataField="operacion" caption="Operación" [width]="130"></dxi-column>
-            <dxi-column dataField="viajes" caption="Viajes" [width]="100"></dxi-column>
-            <dxi-column dataField="viajesCargados" caption="Viajes cargados" [width]="150"></dxi-column>
-            <dxi-column dataField="kmsCargados" caption="Kms. Cargados" [format]="separator" [width]="130"></dxi-column>
-            <dxi-column dataField="kmsCargadosPor" caption="%" format="percent" [width]="100"></dxi-column>
-            <dxi-column dataField="viajesVacio" caption="Viajes vacios" [width]="130"></dxi-column>
-            <dxi-column dataField="kmsVacios" caption="Kms. Vacios" [format]="separator" [width]="130"></dxi-column>
-            <dxi-column dataField="kmsVaciosPor" caption="%" format="percent" [width]="100"></dxi-column>
-            <dxi-column dataField="clienteAtendido" caption="Cliente atendido" [width]="150"></dxi-column>
-            <dxi-column dataField="operadorCiclo" caption="Operadores" [width]="130"></dxi-column>
-            <dxi-column dataField="inicio" caption="Fecha inicio" dataType="date" format="dd/mm/yyyy" [width]="130"></dxi-column>
-            <dxi-column dataField="fin" caption="Fecha fin" dataType="date" format="dd/mm/yyyy" [width]="130"></dxi-column>
-            <dxi-column dataField="dias" caption="Días" [width]="100"></dxi-column>
-            <dxi-column dataField="kms" caption="Kilometros" [format]="separator" [width]="120"></dxi-column>
-            <dxi-column dataField="flete" caption="Flete" [format]="separatorPesos" [width]="100"></dxi-column>
-            <dxi-column dataField="ingrXKm" caption="Ingreso por Kilometro" [format]="redondear" [width]="180"></dxi-column>
+            <dxi-column dataField="viajes" caption="Viajes" [allowFiltering]="false" [width]="100"></dxi-column>
+            <dxi-column dataField="viajesCargados" caption="Viajes cargados" [allowFiltering]="false" [width]="150"></dxi-column>
+            <dxi-column dataField="kmsCargados" caption="Kms. Cargados" [format]="separator" [allowFiltering]="false" [width]="130"></dxi-column>
+            <dxi-column dataField="kmsCargadosPor" caption="%" format="percent" [allowFiltering]="false" [width]="100"></dxi-column>
+            <dxi-column dataField="viajesVacio" caption="Viajes vacios" [allowFiltering]="false" [width]="130"></dxi-column>
+            <dxi-column dataField="kmsVacios" caption="Kms. Vacios" [format]="separator" [allowFiltering]="false" [width]="130"></dxi-column>
+            <dxi-column dataField="kmsVaciosPor" caption="%" format="percent" [allowFiltering]="false" [width]="100"></dxi-column>
+            <dxi-column dataField="clienteAtendido" caption="Cliente atendido" [allowFiltering]="false" [width]="150"></dxi-column>
+            <dxi-column dataField="operadorCiclo" caption="Operadores" [allowFiltering]="false" [width]="130"></dxi-column>
+            <dxi-column dataField="inicio" caption="Fecha inicio" dataType="date" format="dd/mm/yyyy" [allowFiltering]="false" [width]="130"></dxi-column>
+            <dxi-column dataField="fin" caption="Fecha fin" dataType="date" format="dd/mm/yyyy" [allowFiltering]="false" [width]="130"></dxi-column>
+            <dxi-column dataField="dias" caption="Días" [allowFiltering]="false" [width]="100" ></dxi-column>
+            <dxi-column dataField="kms" caption="Kilometros" [format]="separator" [allowFiltering]="false" [width]="120"></dxi-column>
+            <dxi-column dataField="flete" caption="Flete" [format]="separatorPesos" [allowFiltering]="false" [width]="100"></dxi-column>
+            <dxi-column dataField="ingrXKm" caption="Ingreso por Kilometro" [format]="redondear" [allowFiltering]="false" [width]="180"></dxi-column>
 
             <dxi-column dataField="" caption="Detalle" [fixed]="false" cellTemplate="detalleCellTemplate" [width]="100"></dxi-column>
 
