--- a/src/app/pages/macroCiclo/macroCiclo.component.html
+++ b/src/app/pages/macroCiclo/macroCiclo.component.html
@@ -75,20 +75,20 @@
             <dxi-column dataField="viajes" caption="Viajes" [allowFiltering]="false" [width]="100"></dxi-column>
 
             <dxi-column caption="Viajes Cargados">            
-                <dxi-column dataField="viajesCargados" caption="Viajes cargados" [allowFiltering]="false" [width]="150"></dxi-column>
-                <dxi-column dataField="kmsCargados" caption="Kms. Cargados" [format]="separator" [allowFiltering]="false" [width]="130"></dxi-column>
+                <dxi-column dataField="viajesCargados" caption="Cantidad" [allowFiltering]="false" [width]="100"></dxi-column>
+                <dxi-column dataField="kmsCargados" caption="Kms" [format]="separator" [allowFiltering]="false" [width]="100"></dxi-column>
                 <dxi-column dataField="kmsCargadosPor" caption="%" format="percent" [allowFiltering]="false" [width]="100"></dxi-column>
             </dxi-column>
             <dxi-column caption="Viajes Vacíos">
-                <dxi-column dataField="viajesVacio" caption="Cantidad" [allowFiltering]="false" [width]="130"></dxi-column>
-                <dxi-column dataField="kmsVacios" caption="Kms. Vacios" [format]="separator" [allowFiltering]="false" [width]="130"></dxi-column>
+                <dxi-column dataField="viajesVacio" caption="Cantidad" [allowFiltering]="false" [width]="100"></dxi-column>
+                <dxi-column dataField="kmsVacios" caption="Kms" [format]="separator" [allowFiltering]="false" [width]="100"></dxi-column>
                 <dxi-column dataField="kmsVaciosPor" caption="%" format="percent" [allowFiltering]="false" [width]="100"></dxi-column>
             </dxi-column>
 
-            <dxi-column dataField="clienteAtendido" caption="Cliente atendido" [allowFiltering]="false" [width]="150"></dxi-column>
+            <dxi-column dataField="clienteAtendido" caption="Clientes Atendidos" [allowFiltering]="false" [width]="150"></dxi-column>
             <dxi-column dataField="operadorCiclo" caption="Operadores" [allowFiltering]="false" [width]="130"></dxi-column>
-            <dxi-column dataField="inicio" caption="Fecha inicio" dataType="date" format="dd/mm/yyyy" [allowFiltering]="false" [width]="130"></dxi-column>
-            <dxi-column dataField="fin" caption="Fecha fin" dataType="date" format="dd/mm/yyyy" [allowFiltering]="false" [width]="130"></dxi-column>
+            <dxi-column dataField="inicio" caption="Inicio" dataType="date" format="dd/mm/yyyy" [allowFiltering]="false" [width]="130"></dxi-column>
+            <dxi-column dataField="fin" caption="Fin" dataType="date" format="dd/mm/yyyy" [allowFiltering]="false" [width]="130"></dxi-column>
             <dxi-column dataField="dias" caption="Días" [allowFiltering]="false" [width]="100" ></dxi-column>
             <dxi-column dataField="kms" caption="Kilometros" [format]="separator" [allowFiltering]="false" [width]="120"></dxi-column>
             <dxi-column dataField="flete" caption="Flete" [format]="separatorPesos" [allowFiltering]="false" [width]="100"></dxi-column>
