formato fecha macrocilo

--- a/src/app/pages/macroCiclo/macroCiclo.component.html
+++ b/src/app/pages/macroCiclo/macroCiclo.component.html
@@ -83,8 +83,8 @@
             </dxi-column>
             <dxi-column dataField="clienteAtendido" caption="Clientes Atendidos" [allowFiltering]="false" [width]="150"></dxi-column>
             <dxi-column dataField="operadorCiclo" caption="Operadores" [allowFiltering]="false" [width]="130"></dxi-column>
-            <dxi-column dataField="inicio" caption="Inicio" dataType="date" format="dd/mm/yyyy" [allowFiltering]="false" [width]="130"></dxi-column>
-            <dxi-column dataField="fin" caption="Fin" dataType="date" format="dd/mm/yyyy" [allowFiltering]="false" [width]="130"></dxi-column>
+            <dxi-column dataField="inicio" caption="Inicio" dataType="date" format="dd/MM/yyyy" [allowFiltering]="false" [width]="130"></dxi-column>
+            <dxi-column dataField="fin" caption="Fin" dataType="date" format="dd/MM/yyyy" [allowFiltering]="false" [width]="130"></dxi-column>
             <dxi-column dataField="dias" caption="Días" [allowFiltering]="false" [width]="100" ></dxi-column>
             <dxi-column dataField="viajes" caption="Viajes" [allowFiltering]="false" [width]="100"></dxi-column>
             <dxi-column dataField="kms" caption="Kilometros" [format]="separator" [allowFiltering]="false" [width]="120"></dxi-column>
@@ -143,8 +143,8 @@
                 <dxi-column dataField="destino" caption="Destino" [width]="180"></dxi-column>
                 <dxi-column dataField="municipioDestino" caption="Municipio Destino" [width]="130"></dxi-column>
                 <dxi-column dataField="edoDestino" caption="Edo. Destino" [width]="130"></dxi-column>
-                <dxi-column dataField="inicio" caption="Fecha inicio" dataType="date" format="dd/mm/yyyy" [width]="150"></dxi-column>
-                <dxi-column dataField="fin" caption="Fecha fin" dataType="date" format="dd/mm/yyyy" [width]="150"></dxi-column>
+                <dxi-column dataField="inicio" caption="Fecha inicio" dataType="date" format="dd/MM/yyyy" [width]="150"></dxi-column>
+                <dxi-column dataField="fin" caption="Fecha fin" dataType="date" format="dd/MM/yyyy" [width]="150"></dxi-column>
                 <dxi-column dataField="kms" caption="Kilometros" [format]="separator" [width]="100"></dxi-column>
                 <dxi-column dataField="flete" caption="Flete" format="$ #,###,###.##;-$ #,##0.##" [width]="100"></dxi-column>
                 <dxi-column dataField="ingrXKm" caption="Ingreso Kilometro" format="$ #,###,###.##;-$ #,##0.##" [width]="150"></dxi-column>
