--- a/src/app/pages/macroCiclo/macroCiclo.component.html
+++ b/src/app/pages/macroCiclo/macroCiclo.component.html
@@ -90,7 +90,7 @@
             <dxi-column caption="Total">
                 <dxi-column dataField="viajes" caption="Viajes" [allowFiltering]="false" [width]="100"></dxi-column>
                 <dxi-column dataField="kms" caption="Kilometros" [format]="separator" [allowFiltering]="false" [width]="120"></dxi-column>
-                <dxi-column dataField="flete" caption="Flete" [format]="separatorPesos" [allowFiltering]="false" [width]="100"></dxi-column>
+                <dxi-column dataField="flete" caption="Ingreso por Flete" [format]="separatorPesos" [allowFiltering]="false" [width]="160"></dxi-column>
                 <dxi-column dataField="ingrXKm" caption="Ingreso por Kilometro" [format]="redondear" [allowFiltering]="false" [width]="180"></dxi-column>
             </dxi-column>
             <dxi-column dataField="" caption="Detalle" [fixed]="false" cellTemplate="detalleCellTemplate" [width]="100"></dxi-column>
